--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,9 @@ name: Automated API tests using Postman CLI
 
 on: push
 
+    schedule: ## Schedule the job to run at 00.25 am daily.
+      - cron: '26 0 * * *'
+
 jobs:
   automated-api-tests:
     runs-on: ubuntu-latest
