--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
 name: Automated API tests using Postman CLI
 
 on: push
-schedule: ## Schedule the job to run at 00.25 am daily.
-  - cron: '32 0 * 11 5'
+  schedule:
+   -cron: '48 0 * 11 5'
 
 jobs:
   automated-api-tests:
