--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Automated API tests using Postman CLI
 
 on: push
   schedule:
-   -cron: '48 0 * 11 5'
+    - cron: '10 * * * *'
 
 jobs:
   automated-api-tests:
